Fix bug where x-axis scrollbar appears
It's because of the width of the y-axis scrollbar. Shrink width to 98.9vw to work around this.

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ section {
 .skillSection,
 .projectSection {
   position: relative;
-  border: 1px solid red;
-  width: 100vw;
+  width: 98.9vw;
   height: 100vh;
+  border: 1px solid red;
 }
